// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update legacy textarea handles tui-textarea without text content: test.html 1`] = `
{
  "0. Before": "<tui-textarea formControlName="value"></tui-textarea>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
-->
<tui-textfield>
<textarea tuiTextarea formControlName="value"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea keeps tuiTextfieldCleaner and tuiHintContent on tui-textfield wrapper: test.html 1`] = `
{
  "0. Before": "
                <tui-textarea
                    formControlName="value"
                    [tuiTextfieldCleaner]="true"
                    tuiHintContent="Hint text"
                    tuiHintDirection="bottom-right"
                >
                    Label
                </tui-textarea>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Label" became placeholder on <textarea>. Add <label tuiLabel>Label</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield [tuiTextfieldCleaner]="true" tuiHintContent="Hint text" tuiHintDirection="bottom-right">
<textarea placeholder="Label" tuiTextarea formControlName="value"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea migrates TuiTextareaModule import and simple tui-textarea template: test.html 1`] = `
{
  "0. Before": "<tui-textarea formControlName="testValue">Type a text</tui-textarea>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Type a text" became placeholder on <textarea>. Add <label tuiLabel>Type a text</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield>
<textarea placeholder="Type a text" tuiTextarea formControlName="testValue"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea migrates TuiTextareaModule import and simple tui-textarea template: test.ts 1`] = `
{
  "0. Before": "
                import {TuiTextareaModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiTextareaModule],
                  templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiTextarea } from "@taiga-ui/kit";

                                @Component({
                  standalone: true,
                  imports: [TuiTextarea],
                  templateUrl: './test.html',
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update legacy textarea migrates multiple tui-textarea elements in one template: test.html 1`] = `
{
  "0. Before": "
                <tui-textarea formControlName="a">First</tui-textarea>
                <tui-textarea formControlName="b">Second</tui-textarea>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "First" became placeholder on <textarea>. Add <label tuiLabel>First</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield>
<textarea placeholder="First" tuiTextarea formControlName="a"></textarea>
</tui-textfield>
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Second" became placeholder on <textarea>. Add <label tuiLabel>Second</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield>
<textarea placeholder="Second" tuiTextarea formControlName="b"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea migrates tui-textarea attributes: wrapper attrs, [maxLength], drops labelOutside: test.html 1`] = `
{
  "0. Before": "
                <tui-textarea
                    formControlName="testValue"
                    tuiTextfieldSize="s"
                    [maxLength]="150"
                    [tuiTextfieldLabelOutside]="true"
                >
                    Label
                </tui-textarea>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Label" became placeholder on <textarea>. Add <label tuiLabel>Label</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield tuiTextfieldSize="s">
<textarea placeholder="Label" tuiTextarea formControlName="testValue" [limit]="150"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea removes [expandable] and maps [rows] to [max]: test.html 1`] = `
{
  "0. Before": "
                <tui-textarea
                    formControlName="testValue"
                    [expandable]="true"
                    [rows]="10"
                >
                    Type here
                </tui-textarea>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Type here" became placeholder on <textarea>. Add <label tuiLabel>Type here</label> inside <tui-textfield> if a floating label is needed.
     - [expandable] was removed. New component always auto-resizes between [min] (default: 1) and [max] (default: 3) rows. [rows] was migrated to [max]="10".
-->
<tui-textfield>
<textarea placeholder="Type here" tuiTextarea formControlName="testValue" [max]="10"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea removes expandable="false" and maps static rows to max: test.html 1`] = `
{
  "0. Before": "<tui-textarea formControlName="value" expandable="false" rows="5">Text</tui-textarea>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Text" became placeholder on <textarea>. Add <label tuiLabel>Text</label> inside <tui-textfield> if a floating label is needed.
     - expandable="false" was removed. New component always auto-resizes. To restore fixed height set the same value for [min] and max="5" on <textarea tuiTextarea>.
-->
<tui-textfield>
<textarea placeholder="Text" tuiTextarea formControlName="value" max="5"></textarea>
</tui-textfield>",
}
`;

exports[`ng-update legacy textarea reuses inner <textarea tuiTextfieldLegacy> instead of generating a new one: test.html 1`] = `
{
  "0. Before": "
                <tui-textarea [(ngModel)]="value">
                    Bio
                    <textarea
                        maxlength="97"
                        placeholder="Write a few words"
                        tuiTextfieldLegacy
                    ></textarea>
                </tui-textarea>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-textarea migration (see https://taiga-ui.dev/components/textarea):
     - Text content "Bio" became placeholder on <textarea>. Add <label tuiLabel>Bio</label> inside <tui-textfield> if a floating label is needed.
-->
<tui-textfield>
<textarea
                        maxlength="97"
                        placeholder="Write a few words"
                        tuiTextarea
                     [(ngModel)]="value"></textarea>
</tui-textfield>",
}
`;
